# Homogenized_Inflatables_Release

./: .gitignore  .gitmodules  BendingChangeVarSensitivity.hh  BendingStiffnessIntegralSensitivity.hh  BendingStiffnessIntegralSensitivityPattern.hh  CMakeLists.txt  InflatableMidSurfacePeriodicUnit.cc  InflatableMidSurfacePeriodicUnit.hh  InflatablePeriodicUnit.cc  InflatablePeriodicUnit.hh  MeshFEM_temp_RotExtrap.hh  README.md  periodic_inflation_newton.cc  periodic_inflation_newton.hh  periodic_stiffness_analysis.cc  periodic_stiffness_analysis.hh
cmake/: FindKNITRO.cmake  FindLIBIGL.cmake
python/helper/: experiment_helper.py  pattern_generator_using_gmsh.py  periodic_simulation_setup.py  periodic_unit_helper.py
python/unit_cell_experiments/: cosine_curve.ipynb
python_bindings/: CMakeLists.txt  homogenized_inflation.cc
